; ModuleID = '/home/carl/AnghaBench/git/extr_config.c_read_very_early_config.c'
source_filename = "/home/carl/AnghaBench/git/extr_config.c_read_very_early_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_options = type { i32, i32, i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @read_very_early_config(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.config_options, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = bitcast %struct.config_options* %5 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %6, i8 0, i64 24, i1 false)
  %7 = getelementptr inbounds %struct.config_options, %struct.config_options* %5, i32 0, i32 0
  store i32 1, i32* %7, align 4
  %8 = getelementptr inbounds %struct.config_options, %struct.config_options* %5, i32 0, i32 1
  store i32 1, i32* %8, align 4
  %9 = getelementptr inbounds %struct.config_options, %struct.config_options* %5, i32 0, i32 2
  store i32 1, i32* %9, align 4
  %10 = getelementptr inbounds %struct.config_options, %struct.config_options* %5, i32 0, i32 3
  store i32 1, i32* %10, align 4
  %11 = getelementptr inbounds %struct.config_options, %struct.config_options* %5, i32 0, i32 4
  store i32 1, i32* %11, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @config_with_options(i32 %12, i8* %13, i32* null, %struct.config_options* %5)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @config_with_options(i32, i8*, i32*, %struct.config_options*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
